# http2

./: .gitignore  CMakeLists.txt  cmake_install.cmake  sectest1
.cache/clangd/index/: main.c.4777C30A2EEE77EA.idx  movesection.c.0CF371415D374D29.idx  parsing.c.5DF1C1C13AD05A0E.idx  parsing.h.586143A861A624E8.idx  receiving.c.5F4B8882F5F81758.idx  receiving.h.867939ABC2BF97D8.idx  receivingtests.c.7E29895CFEB5CC6A.idx  response.c.DB1E023662790795.idx
include/: map.h  parsing.h  receiving.h  services.h  slice.h  utils.h
src/: CMakeLists.txt  cmake_install.cmake  http  interpret.c  main.c  map.c  parsing.c  receiving.c  response.c  services.c  slice.c  utils.c
tests/: CMakeLists.txt  cmake_install.cmake  fnv1a.c  movesection.c  receivingtests.c  rectest  splitsection.c  trimslice.c
